2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* mkpkg-win32.rb: Remove '-rubygems' in the command line to run tests.
	    `ubygems.rb` was removed in ruby 2.5.

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.5 and 2.2.5.1
	* lib/oci8/version.rb: Update to 2.2.5.1
	* mkpkg-win32.rb: Build binary gems for ruby 2.5.

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* test/test_clob.rb, test/test_oci8.rb: Suppress `warning: assigned but unused variable`

2017-12-26  Yasuo Honda <yasuo.honda@gmail.com>
	* circle.yml: CI with Ruby 2.5.0
	    (github pull request #182)

2017-12-21  Yasuo Honda <yasuo.honda@gmail.com>
	* test/test_break.rb: Suppress expected exceptions tested with Ruby 2.5
	    (github pull request #181)

2017-12-21  Yasuo Honda <yasuo.honda@gmail.com>
	* test/test_oranumber.rb: Suppress `warning: BigDecimal.new is deprecated`
	    (github pull request #180)

2017-10-21  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.4.1 and 2.2.5
	* lib/oci8/version.rb: Update to 2.2.5
	* docs/number-type-mapping.md: minor fix
	* dist-files: Add files.

2017-10-18  Kubo Takehiro <kubo@jiubao.org>
	* docs/number-type-mapping.md, README.md, dist-files: Add document
	    about the mapping between Oracle number types and Ruby classes.

2017-10-17  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8/check_load_error.rb: Check error reason when loading
	    failed with 'The specified module could not be found' on Windows.

2017-10-17  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8/check_load_error.rb: Fix LoadError while trying to check
	    errors in "require 'oci8lib_230.so'" on cygwin 2.8 or later.
	    (related to github issue #176)

2017-10-17  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, test/test_oranumber.rb:
	    Add OraNumber#has_fractional_part?.

2017-10-01  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/plthook_elf.c: Update plthook to use prelinked
	    libclntsh.so on Linux.
	    (github issue #172)
